--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Brahim Toure</h1>
-      <p>I'm a <span class="typed" data-typed-items="Junior web Developer, Software Developer, Java Developer, Database administrator"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Junior web Developer, Software Developer, Java Developer, DBA , full stack developer"></span></p>
     </div>
   </section>
   <main id="main">
@@ -59,7 +59,7 @@
         </div>
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/,ll.jpg" class="img-fluid" alt="">
+            <img src="assets/img/WhatsApp.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Computer Programmer / Generalist.</h3>
@@ -69,8 +69,8 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Linkdin:</strong> <span>https://www.linkedin.com/in/brahim-boubakar-toure/</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://brahimt.github.io/Smileteck/">https://brahimt.github.io/Smileteck/</a></span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Linkdin:</strong> <span><a href="https://www.linkedin.com/in/brahim-boubakar-toure/">https://www.linkedin.com/in/brahim-boubakar-toure/</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Ottawa, Ontario</span></li>
                 </ul>
               </div>
@@ -78,7 +78,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>College Diploma in Computer science</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>Brahimtoure99@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Github:</strong> <span>https://github.com/BrahimT</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Github:</strong> <span><a href="https://github.com/BrahimT">https://github.com/BrahimT</span></a></li>
                 </ul>
               </div>
             </div>
