--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -47,7 +47,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Brahim Toure</h1>
-      <p>I'm a <span class="typed" data-typed-items="Junior web Developer, Software Developer, Java Developer, DBA , full stack developer"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Junior web Designer, Software Developer, Java Developer, Database administrator , full stack developer"></span></p>
     </div>
   </section>
   <main id="main">
@@ -59,7 +59,7 @@
         </div>
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/WhatsApp.jpg" class="img-fluid" alt="">
+            <img src="assets/img/WhatsApp.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Computer Programmer / Generalist.</h3>
