--- a/alert.html
+++ b/alert.html
@@ -1,5 +1,19 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style>
+body {
+  background-color: linen;
+  background-image: url("y9h.gif");
+  background-color: #cccccc;
+}
+
+h1 {
+  color: maroon;
+  margin-left: 40px;
+} 
+</style>
+</head>
 <body>
 
 <p>Please Click the button .</p>
