--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Brahim Toure</h1>
-      <p>I'm a <span class="typed" data-typed-items="Junior web Designer, Junior Software Developer, Java Developer, Database administrator , full stack developer"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Junior web Designer, Junior Software Developer,Application developer , Java Developer, Database administrator , full stack developer"></span></p>
     </div>
   </section>
   <main id="main">
