--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>Brahim's Portfolio </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
-  <link href="assets/img/v.jpeg" rel="icon">
+  <link href="assets/img/maxresdefaul.jpg
+" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
